2006-06-09  Sven Panne  <sven.panne@aedion.de>

	* src/al_ext.h, src/al_rcvar.c, src/al_rcvar.h, src/alc/alc_device.c,
	src/al_config.c, src/al_config.h, src/backends/alc_backend.c: Removed
	unused rc_typestr, rc_lookup_list, rc_print, _alGetGlobalScalar
	functions. Removed unused lal_GetGlobalScalar, lal_GetGlobalVector,
	rc_cddr, rc_cdddr, rc_cddddr, rc_cddddddr, rc_cadr, rc_caddr, rc_cadddr,
	rc_caddddr, rc_cadddddr macro. Made rc_toprim, rc_tofloat, rc_equal,
	rc_member, rc_strequal functions static.

2006-06-07  Sven Panne  <sven.panne@aedion.de>

	* src/backends/alc_backend_alsa.c: Give snd_pcm_open a 2nd chance after
	0.2sec if it fails, because dmix tends to have problems with it when the
	device has been closed recently.

	* src/backends/alc_backend_alsa.c: Make "default" the default ALSA device.

2006-06-07  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Bump version to 1.1.0.

2006-06-07  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/openal.spec.in: Spec updates for SuSE 10.1.

	* configure.ac: Bump version to 1.1.0. This is necessary for building an
	RPM on SuSE 10.1 via y2pmbuild, because the distro already ships a
	snapshot version 1.0.x. Any lower version would be ignored when
	e.g. building freealut.

2006-05-23  Sven Panne  <sven.panne@aedion.de>

	* src/al_ext.c: Extend the set of tokens recognized by alGetEnumValue a
	bit.
	
	* src/alc/alc_context.c: Faked device enumeration a bit. Announce
	ALC_ENUMERATION_EXT and ALC_EXT_CAPTURE extensions. Pretend that we are
	OpenAL 1.1, which is not fully correct yet.

2006-05-12  Sven Panne  <sven.panne@aedion.de>

	* src/al_state.c(alGetString): Following our recent change in the
	nomenclature, AL_RENDERER is now "OpenAL Sample Implementation".

	* src/al_state.c(alGetString): Fixed a bug found by valgrind: For the
	AL_EXTENSIONS query, the pointer returned was pointing to a local
	variable which was already dead. Using "static" is better, but still not